# breeze

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  test.yml
alembic/: env.py  models.py
alembic/versions/: 16ca85ebaf6e_testing_relationships.py  1e9e954821c3_removed_bad_relationship.py  206f7ebfead0_removed_nullable2.py  20cdcd5eb351_test.py  385325bb794d_modified_the_contacts_table.py  414aec58e86c_create_all_tables.py  4564d3585754_test_customer_company_relationship3.py  59a4a668ffd2_test3.py  6cc70b3f07a4_test2.py  71a9231983c7_companies.py  9b66933b7d27_comapny_table.py  bcfd7fbb962e_removed_nullable.py  c12ea88c8bb7_one_more_fix.py  cbf59f759fbc_test.py  d07dc3dc0406_contact_table.py  d77b9ef6a10e_test4.py  f0329aca1ebe_checkin.py
breeze/: breeze.py  logging_config.py  settings.py
breeze_service/: database.py  models.py  settings.py  utils.py
breeze_service/api/: contacts.py  crud.py  customer.py  ping.py  schema.py  techs.py
tests/: test_customers.py  test_ping.py  test_techs.py  testconfig.py
