[tool.poetry]
name = "breeze"
version = "0.1.0"
description = "Ticketing system API"
authors = ["Ryan Jones <ryan.jones26@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
