[tool.poetry]
name = "breeze"
version = "0.1.0"
description = "Ticketing system API"
authors = ["Ryan Jones <ryan.jones26@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
requests = "^2.28.1"
uvicorn = "^0.19.0"
sqlalchemy = "^1.4.43"
python-dotenv = "^0.21.0"
fastapi-sqlalchemy = "^0.2.1"
alembic = "^1.8.1"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
